--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,8 @@ dev = [
     "python-semantic-release>=10.5.2",
 ]
 
-[build-system]
-requires = ["hatchling", "grpcio-tools"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.hooks.custom]
-path = "build.py"
+[tool.uv.build.hooks]
+pre_build = "python -m grpc_tools.protoc --proto_path=./src/cline_core/proto --python_out=./src/cline_core/proto --grpc_python_out=./src/cline_core/proto src/cline_core/proto/**/*.proto"
 
 [tool.semantic_release]
 version_toml = ["pyproject.toml:project.version"]
