--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dev = [
     "python-semantic-release>=10.5.2",
 ]
 
-[tool.uv.build.hooks]
+[tool.uv.hooks]
 pre_build = "python -m grpc_tools.protoc --proto_path=./src/cline_core/proto --python_out=./src/cline_core/proto --grpc_python_out=./src/cline_core/proto src/cline_core/proto/**/*.proto"
 
 [tool.semantic_release]
