--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,9 @@ jobs:
         uses: astral-sh/setup-uv@v7
 
       - name: Install dependencies
-        run: uv sync --all-extras --dev
+        run: |
+          uv sync --dev
+          uv pip install -e .
 
       - name: Run tests
         run: uv run pytest
