fix(build): fix grpc imports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
         run: uv sync --dev
 
       - name: Generate gRPC stubs
-        run: uv run python -m grpc_tools.protoc --proto_path=./src/cline_core/proto --python_out=./src/cline_core/proto --grpc_python_out=./src/cline_core/proto src/cline_core/proto/**/*.proto
+        run: uv run python build.py
 
       - name: Build | Create Distribution Artifacts
         run: uv build --wheel --sdist
